// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RenderingService preboot() render() renders "core" page 1`] = `
Object {
  "anonymousStatusPage": false,
  "basePath": "/mock-server-basepath",
  "branch": Any<String>,
  "buildNumber": Any<Number>,
  "clusterInfo": Object {},
  "csp": Object {
    "warnLegacyBrowsers": true,
  },
  "customBranding": Object {},
  "env": Object {
    "mode": Object {
      "dev": Any<Boolean>,
      "name": Any<String>,
      "prod": Any<Boolean>,
    },
    "packageInfo": Object {
      "branch": Any<String>,
      "buildNum": Any<Number>,
      "buildSha": Any<String>,
      "dist": Any<Boolean>,
      "version": Any<String>,
    },
  },
  "externalUrl": Object {
    "policy": Array [
      Object {
        "allow": true,
      },
    ],
  },
  "i18n": Object {
    "translationsUrl": "/mock-server-basepath/translations/en.json",
  },
  "legacyMetadata": Object {
    "globalUiSettings": Object {
      "defaults": Object {},
      "user": Object {},
    },
    "uiSettings": Object {
      "defaults": Object {
        "registered": Object {
          "name": "title",
        },
      },
      "user": Object {},
    },
  },
  "publicBaseUrl": "http://myhost.com/mock-server-basepath",
  "serverBasePath": "/mock-server-basepath",
  "theme": Object {
    "darkMode": "theme:darkMode",
    "version": "v8",
  },
  "uiPlugins": Array [],
  "vars": Object {},
  "version": Any<String>,
}
`;

exports[`RenderingService preboot() render() renders "core" page driven by settings 1`] = `
Object {
  "anonymousStatusPage": false,
  "basePath": "/mock-server-basepath",
  "branch": Any<String>,
  "buildNumber": Any<Number>,
  "clusterInfo": Object {},
  "csp": Object {
    "warnLegacyBrowsers": true,
  },
  "customBranding": Object {},
  "env": Object {
    "mode": Object {
      "dev": Any<Boolean>,
      "name": Any<String>,
      "prod": Any<Boolean>,
    },
    "packageInfo": Object {
      "branch": Any<String>,
      "buildNum": Any<Number>,
      "buildSha": Any<String>,
      "dist": Any<Boolean>,
      "version": Any<String>,
    },
  },
  "externalUrl": Object {
    "policy": Array [
      Object {
        "allow": true,
      },
    ],
  },
  "i18n": Object {
    "translationsUrl": "/mock-server-basepath/translations/en.json",
  },
  "legacyMetadata": Object {
    "globalUiSettings": Object {
      "defaults": Object {},
      "user": Object {},
    },
    "uiSettings": Object {
      "defaults": Object {
        "registered": Object {
          "name": "title",
        },
      },
      "user": Object {
        "theme:darkMode": Object {
          "userValue": true,
        },
      },
    },
  },
  "publicBaseUrl": "http://myhost.com/mock-server-basepath",
  "serverBasePath": "/mock-server-basepath",
  "theme": Object {
    "darkMode": "theme:darkMode",
    "version": "v8",
  },
  "uiPlugins": Array [],
  "vars": Object {},
  "version": Any<String>,
}
`;

exports[`RenderingService preboot() render() renders "core" page for blank basepath 1`] = `
Object {
  "anonymousStatusPage": false,
  "basePath": "",
  "branch": Any<String>,
  "buildNumber": Any<Number>,
  "clusterInfo": Object {},
  "csp": Object {
    "warnLegacyBrowsers": true,
  },
  "customBranding": Object {},
  "env": Object {
    "mode": Object {
      "dev": Any<Boolean>,
      "name": Any<String>,
      "prod": Any<Boolean>,
    },
    "packageInfo": Object {
      "branch": Any<String>,
      "buildNum": Any<Number>,
      "buildSha": Any<String>,
      "dist": Any<Boolean>,
      "version": Any<String>,
    },
  },
  "externalUrl": Object {
    "policy": Array [
      Object {
        "allow": true,
      },
    ],
  },
  "i18n": Object {
    "translationsUrl": "/translations/en.json",
  },
  "legacyMetadata": Object {
    "globalUiSettings": Object {
      "defaults": Object {},
      "user": Object {},
    },
    "uiSettings": Object {
      "defaults": Object {
        "registered": Object {
          "name": "title",
        },
      },
      "user": Object {},
    },
  },
  "publicBaseUrl": "http://myhost.com/mock-server-basepath",
  "serverBasePath": "/mock-server-basepath",
  "theme": Object {
    "darkMode": "theme:darkMode",
    "version": "v8",
  },
  "uiPlugins": Array [],
  "vars": Object {},
  "version": Any<String>,
}
`;

exports[`RenderingService preboot() render() renders "core" page for unauthenticated requests 1`] = `
Object {
  "anonymousStatusPage": false,
  "basePath": "/mock-server-basepath",
  "branch": Any<String>,
  "buildNumber": Any<Number>,
  "clusterInfo": Object {},
  "csp": Object {
    "warnLegacyBrowsers": true,
  },
  "customBranding": Object {},
  "env": Object {
    "mode": Object {
      "dev": Any<Boolean>,
      "name": Any<String>,
      "prod": Any<Boolean>,
    },
    "packageInfo": Object {
      "branch": Any<String>,
      "buildNum": Any<Number>,
      "buildSha": Any<String>,
      "dist": Any<Boolean>,
      "version": Any<String>,
    },
  },
  "externalUrl": Object {
    "policy": Array [
      Object {
        "allow": true,
      },
    ],
  },
  "i18n": Object {
    "translationsUrl": "/mock-server-basepath/translations/en.json",
  },
  "legacyMetadata": Object {
    "globalUiSettings": Object {
      "defaults": Object {},
      "user": Object {},
    },
    "uiSettings": Object {
      "defaults": Object {
        "registered": Object {
          "name": "title",
        },
      },
      "user": Object {},
    },
  },
  "publicBaseUrl": "http://myhost.com/mock-server-basepath",
  "serverBasePath": "/mock-server-basepath",
  "theme": Object {
    "darkMode": "theme:darkMode",
    "version": "v8",
  },
  "uiPlugins": Array [],
  "vars": Object {},
  "version": Any<String>,
}
`;

exports[`RenderingService preboot() render() renders "core" page with global settings 1`] = `
Object {
  "anonymousStatusPage": false,
  "basePath": "/mock-server-basepath",
  "branch": Any<String>,
  "buildNumber": Any<Number>,
  "clusterInfo": Object {},
  "csp": Object {
    "warnLegacyBrowsers": true,
  },
  "customBranding": Object {},
  "env": Object {
    "mode": Object {
      "dev": Any<Boolean>,
      "name": Any<String>,
      "prod": Any<Boolean>,
    },
    "packageInfo": Object {
      "branch": Any<String>,
      "buildNum": Any<Number>,
      "buildSha": Any<String>,
      "dist": Any<Boolean>,
      "version": Any<String>,
    },
  },
  "externalUrl": Object {
    "policy": Array [
      Object {
        "allow": true,
      },
    ],
  },
  "i18n": Object {
    "translationsUrl": "/mock-server-basepath/translations/en.json",
  },
  "legacyMetadata": Object {
    "globalUiSettings": Object {
      "defaults": Object {},
      "user": Object {
        "foo:bar": Object {
          "userValue": true,
        },
      },
    },
    "uiSettings": Object {
      "defaults": Object {
        "registered": Object {
          "name": "title",
        },
      },
      "user": Object {},
    },
  },
  "publicBaseUrl": "http://myhost.com/mock-server-basepath",
  "serverBasePath": "/mock-server-basepath",
  "theme": Object {
    "darkMode": "theme:darkMode",
    "version": "v8",
  },
  "uiPlugins": Array [],
  "vars": Object {},
  "version": Any<String>,
}
`;

exports[`RenderingService preboot() render() renders "core" with excluded global user settings 1`] = `
Object {
  "anonymousStatusPage": false,
  "basePath": "/mock-server-basepath",
  "branch": Any<String>,
  "buildNumber": Any<Number>,
  "clusterInfo": Object {},
  "csp": Object {
    "warnLegacyBrowsers": true,
  },
  "customBranding": Object {},
  "env": Object {
    "mode": Object {
      "dev": Any<Boolean>,
      "name": Any<String>,
      "prod": Any<Boolean>,
    },
    "packageInfo": Object {
      "branch": Any<String>,
      "buildNum": Any<Number>,
      "buildSha": Any<String>,
      "dist": Any<Boolean>,
      "version": Any<String>,
    },
  },
  "externalUrl": Object {
    "policy": Array [
      Object {
        "allow": true,
      },
    ],
  },
  "i18n": Object {
    "translationsUrl": "/mock-server-basepath/translations/en.json",
  },
  "legacyMetadata": Object {
    "globalUiSettings": Object {
      "defaults": Object {},
      "user": Object {},
    },
    "uiSettings": Object {
      "defaults": Object {
        "registered": Object {
          "name": "title",
        },
      },
      "user": Object {},
    },
  },
  "publicBaseUrl": "http://myhost.com/mock-server-basepath",
  "serverBasePath": "/mock-server-basepath",
  "theme": Object {
    "darkMode": "theme:darkMode",
    "version": "v8",
  },
  "uiPlugins": Array [],
  "vars": Object {},
  "version": Any<String>,
}
`;

exports[`RenderingService preboot() render() renders "core" with excluded user settings 1`] = `
Object {
  "anonymousStatusPage": false,
  "basePath": "/mock-server-basepath",
  "branch": Any<String>,
  "buildNumber": Any<Number>,
  "clusterInfo": Object {},
  "csp": Object {
    "warnLegacyBrowsers": true,
  },
  "customBranding": Object {},
  "env": Object {
    "mode": Object {
      "dev": Any<Boolean>,
      "name": Any<String>,
      "prod": Any<Boolean>,
    },
    "packageInfo": Object {
      "branch": Any<String>,
      "buildNum": Any<Number>,
      "buildSha": Any<String>,
      "dist": Any<Boolean>,
      "version": Any<String>,
    },
  },
  "externalUrl": Object {
    "policy": Array [
      Object {
        "allow": true,
      },
    ],
  },
  "i18n": Object {
    "translationsUrl": "/mock-server-basepath/translations/en.json",
  },
  "legacyMetadata": Object {
    "globalUiSettings": Object {
      "defaults": Object {},
      "user": Object {},
    },
    "uiSettings": Object {
      "defaults": Object {
        "registered": Object {
          "name": "title",
        },
      },
      "user": Object {},
    },
  },
  "publicBaseUrl": "http://myhost.com/mock-server-basepath",
  "serverBasePath": "/mock-server-basepath",
  "theme": Object {
    "darkMode": "theme:darkMode",
    "version": "v8",
  },
  "uiPlugins": Array [],
  "vars": Object {},
  "version": Any<String>,
}
`;

exports[`RenderingService setup() render() renders "core" page 1`] = `
Object {
  "anonymousStatusPage": false,
  "basePath": "/mock-server-basepath",
  "branch": Any<String>,
  "buildNumber": Any<Number>,
  "clusterInfo": Object {},
  "csp": Object {
    "warnLegacyBrowsers": true,
  },
  "customBranding": Object {},
  "env": Object {
    "mode": Object {
      "dev": Any<Boolean>,
      "name": Any<String>,
      "prod": Any<Boolean>,
    },
    "packageInfo": Object {
      "branch": Any<String>,
      "buildNum": Any<Number>,
      "buildSha": Any<String>,
      "dist": Any<Boolean>,
      "version": Any<String>,
    },
  },
  "externalUrl": Object {
    "policy": Array [
      Object {
        "allow": true,
      },
    ],
  },
  "i18n": Object {
    "translationsUrl": "/mock-server-basepath/translations/en.json",
  },
  "legacyMetadata": Object {
    "globalUiSettings": Object {
      "defaults": Object {},
      "user": Object {},
    },
    "uiSettings": Object {
      "defaults": Object {
        "registered": Object {
          "name": "title",
        },
      },
      "user": Object {},
    },
  },
  "publicBaseUrl": "http://myhost.com/mock-server-basepath",
  "serverBasePath": "/mock-server-basepath",
  "theme": Object {
    "darkMode": "theme:darkMode",
    "version": "v8",
  },
  "uiPlugins": Array [],
  "vars": Object {},
  "version": Any<String>,
}
`;

exports[`RenderingService setup() render() renders "core" page driven by settings 1`] = `
Object {
  "anonymousStatusPage": false,
  "basePath": "/mock-server-basepath",
  "branch": Any<String>,
  "buildNumber": Any<Number>,
  "clusterInfo": Object {
    "cluster_name": "cluster-name",
    "cluster_uuid": "cluster-uuid",
    "cluster_version": "8.0.0",
  },
  "csp": Object {
    "warnLegacyBrowsers": true,
  },
  "customBranding": Object {},
  "env": Object {
    "mode": Object {
      "dev": Any<Boolean>,
      "name": Any<String>,
      "prod": Any<Boolean>,
    },
    "packageInfo": Object {
      "branch": Any<String>,
      "buildNum": Any<Number>,
      "buildSha": Any<String>,
      "dist": Any<Boolean>,
      "version": Any<String>,
    },
  },
  "externalUrl": Object {
    "policy": Array [
      Object {
        "allow": true,
      },
    ],
  },
  "i18n": Object {
    "translationsUrl": "/mock-server-basepath/translations/en.json",
  },
  "legacyMetadata": Object {
    "globalUiSettings": Object {
      "defaults": Object {},
      "user": Object {},
    },
    "uiSettings": Object {
      "defaults": Object {
        "registered": Object {
          "name": "title",
        },
      },
      "user": Object {
        "theme:darkMode": Object {
          "userValue": true,
        },
      },
    },
  },
  "publicBaseUrl": "http://myhost.com/mock-server-basepath",
  "serverBasePath": "/mock-server-basepath",
  "theme": Object {
    "darkMode": "theme:darkMode",
    "version": "v8",
  },
  "uiPlugins": Array [],
  "vars": Object {},
  "version": Any<String>,
}
`;

exports[`RenderingService setup() render() renders "core" page for blank basepath 1`] = `
Object {
  "anonymousStatusPage": false,
  "basePath": "",
  "branch": Any<String>,
  "buildNumber": Any<Number>,
  "clusterInfo": Object {
    "cluster_name": "cluster-name",
    "cluster_uuid": "cluster-uuid",
    "cluster_version": "8.0.0",
  },
  "csp": Object {
    "warnLegacyBrowsers": true,
  },
  "customBranding": Object {},
  "env": Object {
    "mode": Object {
      "dev": Any<Boolean>,
      "name": Any<String>,
      "prod": Any<Boolean>,
    },
    "packageInfo": Object {
      "branch": Any<String>,
      "buildNum": Any<Number>,
      "buildSha": Any<String>,
      "dist": Any<Boolean>,
      "version": Any<String>,
    },
  },
  "externalUrl": Object {
    "policy": Array [
      Object {
        "allow": true,
      },
    ],
  },
  "i18n": Object {
    "translationsUrl": "/translations/en.json",
  },
  "legacyMetadata": Object {
    "globalUiSettings": Object {
      "defaults": Object {},
      "user": Object {},
    },
    "uiSettings": Object {
      "defaults": Object {
        "registered": Object {
          "name": "title",
        },
      },
      "user": Object {},
    },
  },
  "publicBaseUrl": "http://myhost.com/mock-server-basepath",
  "serverBasePath": "/mock-server-basepath",
  "theme": Object {
    "darkMode": "theme:darkMode",
    "version": "v8",
  },
  "uiPlugins": Array [],
  "vars": Object {},
  "version": Any<String>,
}
`;

exports[`RenderingService setup() render() renders "core" page for unauthenticated requests 1`] = `
Object {
  "anonymousStatusPage": false,
  "basePath": "/mock-server-basepath",
  "branch": Any<String>,
  "buildNumber": Any<Number>,
  "clusterInfo": Object {},
  "csp": Object {
    "warnLegacyBrowsers": true,
  },
  "customBranding": Object {},
  "env": Object {
    "mode": Object {
      "dev": Any<Boolean>,
      "name": Any<String>,
      "prod": Any<Boolean>,
    },
    "packageInfo": Object {
      "branch": Any<String>,
      "buildNum": Any<Number>,
      "buildSha": Any<String>,
      "dist": Any<Boolean>,
      "version": Any<String>,
    },
  },
  "externalUrl": Object {
    "policy": Array [
      Object {
        "allow": true,
      },
    ],
  },
  "i18n": Object {
    "translationsUrl": "/mock-server-basepath/translations/en.json",
  },
  "legacyMetadata": Object {
    "globalUiSettings": Object {
      "defaults": Object {},
      "user": Object {},
    },
    "uiSettings": Object {
      "defaults": Object {
        "registered": Object {
          "name": "title",
        },
      },
      "user": Object {},
    },
  },
  "publicBaseUrl": "http://myhost.com/mock-server-basepath",
  "serverBasePath": "/mock-server-basepath",
  "theme": Object {
    "darkMode": "theme:darkMode",
    "version": "v8",
  },
  "uiPlugins": Array [],
  "vars": Object {},
  "version": Any<String>,
}
`;

exports[`RenderingService setup() render() renders "core" page with global settings 1`] = `
Object {
  "anonymousStatusPage": false,
  "basePath": "/mock-server-basepath",
  "branch": Any<String>,
  "buildNumber": Any<Number>,
  "clusterInfo": Object {
    "cluster_name": "cluster-name",
    "cluster_uuid": "cluster-uuid",
    "cluster_version": "8.0.0",
  },
  "csp": Object {
    "warnLegacyBrowsers": true,
  },
  "customBranding": Object {},
  "env": Object {
    "mode": Object {
      "dev": Any<Boolean>,
      "name": Any<String>,
      "prod": Any<Boolean>,
    },
    "packageInfo": Object {
      "branch": Any<String>,
      "buildNum": Any<Number>,
      "buildSha": Any<String>,
      "dist": Any<Boolean>,
      "version": Any<String>,
    },
  },
  "externalUrl": Object {
    "policy": Array [
      Object {
        "allow": true,
      },
    ],
  },
  "i18n": Object {
    "translationsUrl": "/mock-server-basepath/translations/en.json",
  },
  "legacyMetadata": Object {
    "globalUiSettings": Object {
      "defaults": Object {},
      "user": Object {
        "foo:bar": Object {
          "userValue": true,
        },
      },
    },
    "uiSettings": Object {
      "defaults": Object {
        "registered": Object {
          "name": "title",
        },
      },
      "user": Object {},
    },
  },
  "publicBaseUrl": "http://myhost.com/mock-server-basepath",
  "serverBasePath": "/mock-server-basepath",
  "theme": Object {
    "darkMode": "theme:darkMode",
    "version": "v8",
  },
  "uiPlugins": Array [],
  "vars": Object {},
  "version": Any<String>,
}
`;

exports[`RenderingService setup() render() renders "core" with excluded global user settings 1`] = `
Object {
  "anonymousStatusPage": false,
  "basePath": "/mock-server-basepath",
  "branch": Any<String>,
  "buildNumber": Any<Number>,
  "clusterInfo": Object {
    "cluster_name": "cluster-name",
    "cluster_uuid": "cluster-uuid",
    "cluster_version": "8.0.0",
  },
  "csp": Object {
    "warnLegacyBrowsers": true,
  },
  "customBranding": Object {},
  "env": Object {
    "mode": Object {
      "dev": Any<Boolean>,
      "name": Any<String>,
      "prod": Any<Boolean>,
    },
    "packageInfo": Object {
      "branch": Any<String>,
      "buildNum": Any<Number>,
      "buildSha": Any<String>,
      "dist": Any<Boolean>,
      "version": Any<String>,
    },
  },
  "externalUrl": Object {
    "policy": Array [
      Object {
        "allow": true,
      },
    ],
  },
  "i18n": Object {
    "translationsUrl": "/mock-server-basepath/translations/en.json",
  },
  "legacyMetadata": Object {
    "globalUiSettings": Object {
      "defaults": Object {},
      "user": Object {},
    },
    "uiSettings": Object {
      "defaults": Object {
        "registered": Object {
          "name": "title",
        },
      },
      "user": Object {},
    },
  },
  "publicBaseUrl": "http://myhost.com/mock-server-basepath",
  "serverBasePath": "/mock-server-basepath",
  "theme": Object {
    "darkMode": "theme:darkMode",
    "version": "v8",
  },
  "uiPlugins": Array [],
  "vars": Object {},
  "version": Any<String>,
}
`;

exports[`RenderingService setup() render() renders "core" with excluded user settings 1`] = `
Object {
  "anonymousStatusPage": false,
  "basePath": "/mock-server-basepath",
  "branch": Any<String>,
  "buildNumber": Any<Number>,
  "clusterInfo": Object {
    "cluster_name": "cluster-name",
    "cluster_uuid": "cluster-uuid",
    "cluster_version": "8.0.0",
  },
  "csp": Object {
    "warnLegacyBrowsers": true,
  },
  "customBranding": Object {},
  "env": Object {
    "mode": Object {
      "dev": Any<Boolean>,
      "name": Any<String>,
      "prod": Any<Boolean>,
    },
    "packageInfo": Object {
      "branch": Any<String>,
      "buildNum": Any<Number>,
      "buildSha": Any<String>,
      "dist": Any<Boolean>,
      "version": Any<String>,
    },
  },
  "externalUrl": Object {
    "policy": Array [
      Object {
        "allow": true,
      },
    ],
  },
  "i18n": Object {
    "translationsUrl": "/mock-server-basepath/translations/en.json",
  },
  "legacyMetadata": Object {
    "globalUiSettings": Object {
      "defaults": Object {},
      "user": Object {},
    },
    "uiSettings": Object {
      "defaults": Object {
        "registered": Object {
          "name": "title",
        },
      },
      "user": Object {},
    },
  },
  "publicBaseUrl": "http://myhost.com/mock-server-basepath",
  "serverBasePath": "/mock-server-basepath",
  "theme": Object {
    "darkMode": "theme:darkMode",
    "version": "v8",
  },
  "uiPlugins": Array [],
  "vars": Object {},
  "version": Any<String>,
}
`;
